Restructure to use dynamic-frame
- Add binder V2
- Add glightbox
- Restructure to use glightbox and dynamic-frame

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
   app:
     build:
       context: .
-    mem_limit: ${MEM_LIMIT:-4G}
+    mem_limit: ${MEM_LIMIT:-2147484000}  # 2GiB
     cpus: ${CPU_LIMIT:-0}
     environment:
       FLASK_APP: ${FLASK_APP:-app.wsgi}
