--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     mem_limit: ${MEM_LIMIT:-2147484000}  # 2GiB
     cpus: ${CPU_LIMIT:-0}
     environment:
-      FLASK_APP: ${FLASK_APP:-app.wsgi}
+      FLASK_APP: ${FLASK_APP:-app}
       FLASK_ENV: ${FLASK_ENV:-production}
       FLASK_DEBUG: ${FLASK_DEBUG:-0}
       LOG_LEVEL: ${LOG_LEVEL:-info}
