--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ arrow = "^1.2.2"
 pony = "^0.7.16"
 click = "^8.1.0"
 Flask = "^2.1.0"
+gunicorn = "^20.1.0"
+gevent = "^21.12.0"
 
 [tool.poetry.group.test]
 optional = true
