--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ click = "^8.1.0"
 Flask = "^2.1.0"
 gunicorn = "^20.1.0"
 gevent = "^21.12.0"
+argon2-cffi = "^21.3.0"
 
 [tool.poetry.group.test]
 optional = true
@@ -30,6 +31,7 @@ black = "^22.3.0"
 flake8 = "^4.0.1"
 devtools = {extras = ["pygments"], version = "^0.8.0"}
 djlint = "^1.0.3"
+pony-stubs = "^0.5.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
