--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ Flask = "^2.1.0"
 gunicorn = "^20.1.0"
 gevent = "^21.12.0"
 argon2-cffi = "^21.3.0"
+redis = "^4.3.1"
 
 [tool.poetry.group.test]
 optional = true
