--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ gunicorn = "^20.1.0"
 gevent = "^21.12.0"
 argon2-cffi = "^21.3.0"
 redis = "^4.3.1"
+sendgrid = "^6.9.7"
 
 [tool.poetry.group.test]
 optional = true
