--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,4 +40,4 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.djlint]
-ignore = "J018,H021,J004"
+ignore = "J018,H021,J004,H030,H031"
