--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,4 +40,23 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.djlint]
+profile = "jinja"
 ignore = "J018,H021,J004,H030,H031"
+custom_html = "\\w+-\\w+,\\w+-\\w+-\\w+,\\w+-\\w+-\\w+-\\w+" 
+
+[tool.black]
+line-length = 120
+
+[tool.isort]
+profile = "black"
+
+[tool.flake8]
+max-line-length = 120
+extend-ignore = "E501,E303,E128,E201,E202,E122,W191,E402,W291,E711,E712,W503,"
+
+[tool.pyright]
+typeCheckingMode = "basic"
+reportGeneralTypeIssues = "information"
+reportOptionalMemberAccess = "information"
+reportOptionalCall = "information"
+reportPrivateImportUsage = "information"
