--- a/Pipfile
+++ b/Pipfile
@@ -4,11 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [requires]
-python_version = "3.10"
+python_version = "3.11"
 
 [packages]
 arrow = "*"
-pony = "*"
 click = "*"
 Flask = "*"
 gunicorn = "*"
@@ -16,17 +15,16 @@ gevent = "*"
 argon2-cffi = "*"
 redis = "*"
 sendgrid = "*"
+flask-sqlalchemy = "*"
 
-# Packages required in the container for development
 [dev-packages]
 pytest = "*"
 devtools = {extras = ["pygments"], version = "*"}
 watchdog = "*"
 
-# Packages required locally for development
 [local-packages]
 black = "*"
 flake8 = "*"
+pyproject-flake8 = "*"
 flake8-eradicate = "*"
-pony-stubs = "*"
 djlint = "*"
