--- a/Pipfile
+++ b/Pipfile
@@ -17,7 +17,7 @@ redis = "*"
 sendgrid = "*"
 flask-sqlalchemy = "*"
 alembic = "*"
-flask-alembic = "*"
+flask-migrate = "*"
 
 [dev-packages]
 pytest = "*"
