Update calculate_expected_hours to handle different work schedules

--- a/Pipfile
+++ b/Pipfile
@@ -24,6 +24,7 @@ flask-sqlalchemy = "*"
 pytest = "*"
 devtools = {extras = ["pygments"], version = "*"}
 watchdog = "*"
+flask-shell-ipython = "*"
 
 [local-packages]
 black = "*"
