--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,6 @@ services:
   app:
     build:
       context: .
-    mem_limit: ${MEM_LIMIT:-2147484000}  # 2GiB
-    cpus: ${CPU_LIMIT:-0}
     environment:
       FLASK_APP: ${FLASK_APP:-app}
       FLASK_DEBUG: ${FLASK_DEBUG:-0}
@@ -19,13 +17,11 @@ services:
     image: 'log-my-time:latest'
     restart: always
     volumes:
-      - 'db:/home/app/log-my-time/db/'
+      - './db:/home/app/log-my-time/db/'
     ports:
       - ${FLASK_PORT:-4000}:5000
 
   cache:
-    mem_limit: 2147484000  # 2 GiB
-    cpus: 2
     image: redis:6-alpine
     restart: always
     container_name: 'log-my-time-cache'
