--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -3,23 +3,42 @@
 version: "2.4"
 
 services:
-  app:
-    build:
-      context: .
-    mem_limit: ${MEM_LIMIT:-2147484000}  # 2GiB
-    cpus: ${CPU_LIMIT:-0}
-    environment:
-      FLASK_APP: ${FLASK_APP:-app}
-      FLASK_DEBUG: ${FLASK_DEBUG:-1}
-      LOG_LEVEL: ${LOG_LEVEL:-warning}
-    volumes:
-      - "./app:/home/app/log-my-time/app"
-      - "./db:/home/app/log-my-time/db"
-      - "./config:/home/app/log-my-time/config"
-      - "./tests:/home/app/log-my-time/tests"
-      - "./migrations:/home/app/log-my-time/migrations"
-      - "./flask-sqlalchemy:/home/app/log-my-time/flask-sqlalchemy"
+    app:
+        build:
+            context: .
+        mem_limit: ${MEM_LIMIT:-2147484000} # 2GiB
+        cpus: ${CPU_LIMIT:-0}
+        environment:
+            FLASK_APP: ${FLASK_APP:-app}
+            FLASK_DEBUG: ${FLASK_DEBUG:-1}
+            LOG_LEVEL: ${LOG_LEVEL:-warning}
+        volumes:
+            - "./app:/home/app/log-my-time/app"
+            - "./db:/home/app/log-my-time/db"
+            - "./config:/home/app/log-my-time/config"
+            - "./tests:/home/app/log-my-time/tests"
+            - "./migrations:/home/app/log-my-time/migrations"
+            - "./debug:/home/app/log-my-time/debug"
 
-  cache:
-    mem_limit: 2147484000  # 2 GiB
-    cpus: 2
+    # Container that is used for running tests
+    test:
+        container_name: "log-my-time-test"
+        build:
+            context: .
+            args:
+                - TEST_MODE=1
+        mem_limit: ${MEM_LIMIT:-2147484000} # 2GiB
+        cpus: ${CPU_LIMIT:-0}
+        environment:
+            FLASK_APP: ${FLASK_APP:-app}
+            FLASK_DEBUG: ${FLASK_DEBUG:-1}
+            LOG_LEVEL: ${LOG_LEVEL:-warning}
+            TEST_MODE: "yes"
+        volumes:
+            - "./config:/home/app/log-my-time/config"
+            - "./migrations:/home/app/log-my-time/migrations"
+            - "./debug:/home/app/log-my-time/debug"
+
+    cache:
+        mem_limit: 2147484000 # 2 GiB
+        cpus: 2
