Generate code coverage from tests

--- a/Pipfile
+++ b/Pipfile
@@ -25,6 +25,7 @@ pytest = "*"
 devtools = {extras = ["pygments"], version = "*"}
 watchdog = "*"
 pytest-playwright = "*"
+coverage = "*"
 
 [local-packages]
 black = "*"
