What's New Page
- "What's New" page
- `is_admin` flag on users
- Interface for admins to log new features
- Notification dot when a new feature has been added but not seen
- ESLint
- Minor cleanup
- Added `holidays` package but not used it yet

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,6 +6,8 @@
         "WyattFerguson.jinja2-snippet-kit",
         "samuelcolvin.jinjahtml",
         "monosans.djlint",
-        "esbenp.prettier-vscode"
+        "charliermarsh.ruff",
+        "esbenp.prettier-vscode",
+        "dbaeumer.vscode-eslint"
     ]
 }
