Pull holiday location from settings

--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,7 @@ python_version = "3.11"
 [packages]
 arrow = "*"
 click = "*"
-Flask = "*"
+Flask = ">2,<3"
 gunicorn = "*"
 gevent = "*"
 argon2-cffi = "*"
@@ -17,7 +17,7 @@ redis = "*"
 sendgrid = "*"
 alembic = "*"
 flask-migrate = "*"
-sqlalchemy = "*"
+sqlalchemy = ">2,<3"
 flask-sqlalchemy = "*"
 holidays = "*"
 
