--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       LOG_LEVEL: ${LOG_LEVEL:-info}
     container_name: 'log-my-time'
     image: 'log-my-time:latest'
-    restart: always
+    restart: unless-stopped
     volumes:
       - './db:/home/app/log-my-time/db/'
     ports:
@@ -21,7 +21,7 @@ services:
 
   cache:
     image: redis:6-alpine
-    restart: always
+    restart: unless-stopped
     container_name: 'log-my-time-cache'
     command: redis-server
     volumes:
