--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       FLASK_APP: ${FLASK_APP:-app}
       FLASK_DEBUG: ${FLASK_DEBUG:-0}
       LOG_LEVEL: ${LOG_LEVEL:-info}
+      ENVIRONMENT: production
     container_name: 'log-my-time'
     image: 'log-my-time:latest'
     restart: unless-stopped
