--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,52 +1,54 @@
 {
     "python.envFile ": "${workspaceFolder}/python.env",
-    "python.analysis.extraPaths": ["./mod-phineas"],
-    "python.autoComplete.extraPaths": ["./mod-phineas"],
-
+    "python.analysis.extraPaths": [
+        "./mod-phineas"
+    ],
+    "python.autoComplete.extraPaths": [
+        "./mod-phineas"
+    ],
     // ESLint
     "eslint.enable": true,
-    "eslint.probe": ["javascript", "html", "jinja-html"],
-    "eslint.validate": ["javascript", "html", "jinja-html"],
-
+    "eslint.probe": [
+        "javascript",
+        "html",
+        "jinja-html"
+    ],
+    "eslint.validate": [
+        "javascript",
+        "html",
+        "jinja-html"
+    ],
     "files.trimTrailingWhitespace": false,
-
     "files.associations": {
         "*.mjml.j2": "mjml"
     },
-
     "files.exclude": {
         "**/__pycache__": true,
         "**/venv/": true
     },
-
     "files.watcherExclude": {
         "**/venv/**": true,
         "**/__pycache__": true
     },
-
     "[markdown]": {
         "files.trimTrailingWhitespace": false,
         "editor.formatOnSave": false
     },
-
     "[python]": {
         "editor.formatOnSave": true,
-        "editor.defaultFormatter": "ms-python.black-formatter",
+        "editor.defaultFormatter": "charliermarsh.ruff",
         "editor.codeActionsOnSave": {
             "source.organizeImports": "explicit"
         }
     },
-
     "[jinja-html]": {
         "editor.formatOnSave": false,
         "editor.defaultFormatter": "monosans.djlint"
     },
-
     "[css][postcss][javascript]": {
         "editor.formatOnSave": true,
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
-
     "python.linting.pylintEnabled": false,
     "python.linting.flake8Enabled": false,
     "python.languageServer": "Pylance",
@@ -59,7 +61,9 @@
         "reportPrivateImportUsage": "information"
     },
     "python.formatting.provider": "black",
-    "python.formatting.blackArgs": ["--line-length=120"],
+    "python.formatting.blackArgs": [
+        "--line-length=120"
+    ],
     "[javascript]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
