Add slack integration

--- a/Pipfile
+++ b/Pipfile
@@ -9,18 +9,18 @@ python_version = "3.12"
 [packages]
 arrow = "*"
 click = "*"
-Flask = ">2,<3"
+Flask = "==3.0.3"
 gunicorn = "*"
 gevent = "*"
 argon2-cffi = "*"
 redis = "*"
 sendgrid = "*"
-alembic = "*"
-flask-migrate = "*"
 sqlalchemy = ">2,<3"
-flask-sqlalchemy = "*"
 holidays = "*"
 rollbar = "*"
+requests = "*"
+flask-sqlalchemy-lite = "*"
+flask-alembic = "*"
 
 [dev-packages]
 pytest = "*"
